5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_2443.log
== SUBMITION (2019-04-16 15:28:17) 
-- CODE:
from math import *
r = float (input("Digite raio:"))
x = float(input("Digite altura:"))
w = input("Opcao desejada(1/2):")
va = pi*x**2*(3*r - x)/3
vc = (4*pi*r**3)/3
dva = vc - va
if(w == "1"):
	print(round(va,4))
	else:
		print(round(dva,4))
-- EXECUTION TIME:
0.208472
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 10
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:28:27) 
-- CODE:
from math import *
r = float (input("Digite raio:"))
x = float(input("Digite altura:"))
w = input("Opcao desejada(1/2):")
va = pi*x**2*(3*r - x)/3
vc = (4*pi*r**3)/3
dva = vc - va
if(w == "1"):
	print(round(va,4))
else:
	print(round(dva,4))
-- EXECUTION TIME:
0.250529
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
